# xmpkit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/: dependabot.yml
.github/actions/ndk-dev-rs/: action.yml
.github/workflows/: main.yml  pages.yml  publish.yml  semantic-pr-title.yml
benches/: file_io.rs  metadata_ops.rs  parse.rs  serialize.rs
docs/: ARCHITECTURE.md  BENCHMARK.md  CONTRIBUTING.md  HARMONYOS.md  README.md  WEBASSEMBLY.md
examples/: read_aigc_xmp.rs  read_xmp.rs  write_xmp.rs
src/: lib.rs
src/core/: error.rs  mod.rs  namespace.rs  node.rs  parser.rs  serializer.rs  xpath.rs
src/core/metadata/: macros.rs  mod.rs  node.rs
src/files/: file.rs  handler.rs  mod.rs  registry.rs
src/files/formats/: gif.rs  jpeg.rs  mod.rs  mp3.rs  mp4.rs  mpeg4.rs  pdf.rs  png.rs  psd.rs  svg.rs  tiff.rs  webp.rs
src/files/formats/bmff/: mod.rs  mpeg4.rs  mpegh.rs
src/files/formats/riff/: avi.rs  mod.rs  wav.rs  webp.rs
src/ohos/: datetime.rs  error.rs  file.rs  meta.rs  mod.rs  namespace.rs  qualifier.rs  value.rs
src/types/: mod.rs  qualifier.rs  value.rs
src/utils/: datetime.rs  mod.rs
src/wasm/: datetime.rs  error.rs  file.rs  meta.rs  mod.rs  namespace.rs  qualifier.rs  value.rs
tests/: integration_tests.rs  multi_thread.rs  nested_structures.rs  xmp_file.rs  xmp_meta.rs
tests/fixtures/: mod.rs
web/: .gitignore  README.md  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
web/e2e/: vue.spec.ts
web/src/: App.vue  main.ts
web/src/assets/: base.css  main.css
web/src/components/__tests__/: HelloWorld.spec.ts
web/src/composables/: useXmp.ts
web/src/locales/: en-US.ts  zh-CN.ts
web/src/utils/: i18n.ts  wasm.ts
